# voice-cloning

./: Dockerfile  README.md  clone_tts.py  pyproject.toml  requirements.txt
Docker/: Dockerfile
